# huellas

./: AGENTS.md  CONTEXT.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/adr/: 0001-tauri-desktop-app.md
src/: export.rs  index.html  main.rs  pdf.rs
