[package]
name = "huellas"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
lopdf = "0.41"
sha2 = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webbrowser = "1.2"
tower-http = { version = "0.6", features = ["fs", "cors"] }
csv = "1.4"
rust_xlsxwriter = "0.95"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
